--- a/serenity.properties
+++ b/serenity.properties
@@ -1,4 +1,4 @@
-serenity.project.name = Restful Booker
+serenity.project.name = Restful Booker Project
 
 ## This will add exception in compromised into report
 serenity.compromised.on = java.io.FileNotFoundException
